Fixes issue with title being too long

--- a/src/graphics/css/event.css
+++ b/src/graphics/css/event.css
@@ -13,6 +13,11 @@
 
 .event .title {
   color: var(--ct-yellow);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 .event .description {
